# ansible-molecule-images

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  ansible.cfg  containers.yml  pyproject.toml  requirements.txt  requirements.yml
playbooks/: build.yml  docker.yml  dockerhub.yml  prune.yml
playbooks/templates/: Dockerfile.j2  description.md.j2
playbooks/templates/dockerhub/: description.txt.j2  full_description.md.j2
playbooks/vars/: almalinux.yml  alpine.yml  amazonlinux-2.yml  amazonlinux.yml  archlinux.yml  debian.yml  fedora.yml  opensuse-leap.yml  opensuse-tumbleweed.yml  oraclelinux.yml  ubuntu.yml
